<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.barisatalay.yorkiewallet.ui.connectwallet.ConnectWalletViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_20sdp">
        <TextView
            android:id="@+id/tv_wallet_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_wallet"
            android:textColor="@color/white"
            android:textSize="@dimen/_35sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />

        <TextView
            android:id="@+id/tv_wallet_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_label"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <EditText
            android:id="@+id/et_wallet_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_gray_300_radius_5"
            android:maxLines="2"
            android:minHeight="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_wallet_label" />

        <TextView
            android:id="@+id/tv_wallet_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/public_address"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_wallet_label" />

        <EditText
            android:id="@+id/et_wallet_public_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_gray_300_radius_5"
            android:maxLines="2"
            android:minHeight="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_12sdp"
            android:text="DPDyr8RCSVAR3EC9dmaAhjRKMsqw946nceDPEbq6SbNN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_wallet_address" />

        <TextView
            android:id="@+id/tv_wallet_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/network"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_wallet_public_address" />

        <EditText
            android:id="@+id/et_wallet_network"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_gray_300_radius_5"
            android:text="@string/solana"
            android:enabled="false"
            android:minHeight="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_wallet_network" />

        <TextView
            android:id="@+id/tv_connect_wallet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_light_blue_radius_5"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/connect_wallet"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_red_a700_radius_5"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>